submit week 3 test

--- a/index.html
+++ b/index.html
@@ -7,24 +7,34 @@
     <title>Document</title>
     <link rel="stylesheet" href="./css/main.css">
     <link rel="stylesheet" href="./css/reset.css">
+    <link rel="stylesheet" href="./css/font.css">
+    <link rel="stylesheet" href="./css/img.css">
 </head>
 <body>
     <main class="container">
         <div>
     <div class="first">
-    <img src="./img/cc-apple-pay-brands.svg" width="200px" height="200px">
+    <img class="first" src="./img/users-solid.svg" width="200px" height="200px">
+    <h2 class="heading">Client<br>kickoff</h2>
+    <p class="paragraph">Our digital planning roadmap for inbound begins with a client kickoff meeting. We identify goals and priorities, and lay a foundation that will build a strong agency/client ralantionship. </p>
         </div>
         <div>
     <div class="second">
-    <img src="./img/random-solid.svg" width="200px" height="200px">
+    <img class="second" src="./img/random-solid.svg" width="200px" height="200px">
+    <h2 class="heading">Messaging<br>development</h2>
+    <p class="paragraph">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Esse magnam accusamus iste veritatis quis ipsum nulla perspiciatis, maxime voluptates ipsa libero deserunt veniam, sapiente odit earum debitis reprehenderit, laudantium vitae.</p>
         </div>
         <div>
     <div class="third">
-    <img src="./img/university-solid.svg" width="200px" height="200px">
+    <img class="third" src="./img/university-solid.svg" width="200px" height="200px">
+    <h2 class="heading">Sales<br>aligment</h2>
+    <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum cupiditate reprehenderit repudiandae eum beatae quasi nisi facere atque, magnam ex doloribus ut temporibus officia pariatur adipisci impedit autem dolorem dicta. Minima, tenetur excepturi? Temporibus architecto sed beatae quas! Minima ea cum omnis numquam sit. Cum illum ullam repellat placeat enim sit dolores obcaecati nam corrupti animi commodi est sapiente odio nesciunt et reprehenderit quo esse  </p>
         </div>
         <div>
     <div class="fourth">
-    <img src="./img/users-solid.svg" width="200px" height="200px">
+    <img class="fourth" src="./img/users-solid.svg" width="200px" height="200px">
+    <h2 class="heading">Campaign<br>strategy</h2>
+    <p class="paragraph">Our digital planning roadmap for inbound begins with a client kickoff meeting. We identify goals and priorities, and lay a foundation that will build a strong agency/client ralantionship. </p>
         </div>
     </main>
 </body>
