--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>TEST</title>
     <link rel="stylesheet" href="./css/main.css">
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/font.css">
@@ -13,28 +13,33 @@
 <body>
     <main class="container">
         <div>
-    <div class="first">
-    <img class="first" src="./img/users-solid.svg" width="200px" height="200px">
-    <h2 class="heading">Client<br>kickoff</h2>
-    <p class="paragraph">Our digital planning roadmap for inbound begins with a client kickoff meeting. We identify goals and priorities, and lay a foundation that will build a strong agency/client ralantionship. </p>
-        </div>
-        <div>
-    <div class="second">
-    <img class="second" src="./img/random-solid.svg" width="200px" height="200px">
-    <h2 class="heading">Messaging<br>development</h2>
-    <p class="paragraph">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Esse magnam accusamus iste veritatis quis ipsum nulla perspiciatis, maxime voluptates ipsa libero deserunt veniam, sapiente odit earum debitis reprehenderit, laudantium vitae.</p>
-        </div>
-        <div>
-    <div class="third">
-    <img class="third" src="./img/university-solid.svg" width="200px" height="200px">
-    <h2 class="heading">Sales<br>aligment</h2>
-    <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum cupiditate reprehenderit repudiandae eum beatae quasi nisi facere atque, magnam ex doloribus ut temporibus officia pariatur adipisci impedit autem dolorem dicta. Minima, tenetur excepturi? Temporibus architecto sed beatae quas! Minima ea cum omnis numquam sit. Cum illum ullam repellat placeat enim sit dolores obcaecati nam corrupti animi commodi est sapiente odio nesciunt et reprehenderit quo esse  </p>
-        </div>
-        <div>
-    <div class="fourth">
-    <img class="fourth" src="./img/users-solid.svg" width="200px" height="200px">
-    <h2 class="heading">Campaign<br>strategy</h2>
-    <p class="paragraph">Our digital planning roadmap for inbound begins with a client kickoff meeting. We identify goals and priorities, and lay a foundation that will build a strong agency/client ralantionship. </p>
+            <div class="first">
+                <img class="first" src="./img/users-solid.svg">
+                <span class="num1">1</span>
+                <h2 class="heading">Client<br>kickoff</h2>
+                <p class="paragraph">Our digital planning roadmap for inbound begins with a client kickoff meeting. We identify goals and priorities, and lay a foundation that will build a strong agency/client ralantionship. </p>
+            </div>
+            <div>
+                <div class="second">
+                    <img class="second" src="./img/random-solid.svg">
+                    <span class="num2">2</span>
+                    <h2 class="heading">Messaging<br>development</h2>
+                    <p class="paragraph">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Esse magnam accusamus iste veritatis quis ipsum nulla perspiciatis, maxime voluptates ipsa libero deserunt veniam, sapiente odit earum debitis reprehenderit, laudantium vitae.</p>
+                </div>
+            <div>
+            <div class="third">
+                <img class="third" src="./img/university-solid.svg">
+                <span class="num3">3</span>
+                <h2 class="heading">Sales<br>aligment</h2>
+                <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum cupiditate reprehenderit repudiandae eum beatae quasi nisi facere atque, magnam ex doloribus ut temporibus officia pariatur adipisci impedit autem dolorem dicta. Minima, tenetur excepturi? Temporibus architecto sed beatae quas! Minima ea cum omnis numquam sit. Cum illum ullam repellat placeat enim sit dolores obcaecati nam corrupti animi commodi est sapiente odio nesciunt et reprehenderit quo esse  </p>
+            </div>
+            <div>
+            <div class="fourth">
+                <img class="fourth" src="./img/cc-apple-pay-brands.svg">
+                <span class="num4">4</span>
+                <h2 class="heading">Campaign<br>strategy</h2>
+                <p class="paragraph">Our digital planning roadmap for inbound begins with a client kickoff meeting. We identify goals and priorities, and lay a foundation that will build a strong agency/client ralantionship. </p>
+            </div>
         </div>
     </main>
 </body>
